# Ticket3000

./: .replit  auth.py  docker-compose.yml  gunicorn.conf.py  main.py  pasted_text_1726379732412.txt  pasted_text_1726380954806.txt  pyproject.toml  readme.md  requirements.txt  tickets.py  users.txt
static/css/: style.css
static/js/: app.js
templates/: admin_dashboard.html  dashboard.html  login.html  register.html
